ags (3.6.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented GStreamer support
	* implemented AgsComplex support in ags_fourier_transform_util.[ch]
	* improved the developer's manual

ags (3.5.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing AgsMutable interface of ags-fx-volume
	* improved thread-safety of AgsServer
	* improved thread-safety of AgsOscServer

ags (3.5.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed NULL pointer of ags_ui_provider_get_navigation()
	* fixed missing update of LV2_Options_Option after configuration changed

ags (3.5.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed initial loop set of AgsDrum, AgsMatrix, AgsFFPlayer, AgsPitchSampler,
	  AgsAudiorec, AgsDssiBridge, AgsLiveDssiBridge, AgsLv2Bridge and AgsLiveLv2Bridge

ags (3.5.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsDssiBridge accessing integer as string

ags (3.5.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing reset of notation edit's horizont scrollbar after zoom changed

ags (3.5.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed shrink audio channels by removing i < pads

ags (3.5.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented fallback path of plugins

ags (3.5.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed tempo issue

ags (3.5.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audiorec_fast_export() current_buffer_size variable

ags (3.5.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed audio fast export

ags (3.5.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing $(docdir)/images/adwaita

ags (3.5.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing call to AgsRecall::done() in ags_fx_notation_audio_signal.c